src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  background: #252525;
  background: linear-gradient(15deg, #101010 0%, #252525 100%);
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}


.fullscreen {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 3rem;
  transition: all 2s;
}

.bg {
  background: linear-gradient(to top, #0a0a0a, #181a1a, #1d1d1f);
}
.enterContainer{
  display: flex;
  gap: 3rem;
  justify-content: center;
margin-top: 3rem;
}

.notready {
  color: #fff;
}

.clicked {
  pointer-events: none;
  opacity: 0;
}

a {
  pointer-events: all;
  cursor: pointer;
  color: inherit;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  color: inherit;
}


.intro-p{

  font-weight: 400;
  font-size: 3em;
  @media only screen and (max-width: 600px){
    font-weight: 300;
    font-size: 2em;
  }

  letter-spacing: -0.045em;


}
.log-box {
  position: fixed;
  border-radius: 10px;
  font-family: monospace;
  color: #fff;
  overflow-y: auto; /* Ensure it's scrollable */
  word-wrap: break-word; /* Breaks long words onto the next line */
  bottom: 20px; /* Align to the bottom of the viewport */
  right: 20px; /* Align to the right of the viewport */
  width: 600px; /* Set a fixed width */
  max-width: 100%;
  height: 200px; /* Set a fixed height */
  background-color: rgba(0, 0, 0, 0.7); /* Optional: Background color with transparency */
  @media only screen and (max-width: 600px){
    right: 0px;
    height: 150px; /* Set a fixed height */

  }

}

.button {
  background: #fff;
  color:#000 ;

}
.hide-mobile{
  @media only screen and (max-width: 600px){
    display: none;
  }
}

.buttonModal{
  background: #000;
  color:#ffffff ;
}

